# pico-gs

./: .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Makefile  README.md  RP2350_Host_Software_Description.md  build.sh  constitution.md  deny.toml
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: gpu-coordinator.md  rust-twin-specialist.md  syskit-specialist.md  verification-specialist.md  verilog-specialist.md
.claude/commands/: dt-verify-team.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: post-attach.sh  post-create.sh
.specify/memory/: constitution.md
.syskit/: manifest.md
.syskit/scripts/: establish-traceability.py  migrate-speckit.py  validate-migration.py
asset_build_tool/: Cargo.toml
asset_build_tool/src/: lib.rs  obj_converter.rs  output_gen.rs  types.rs
components/alpha-blend/twin/: Cargo.toml
components/alpha-blend/twin/src/: lib.rs
components/color-combiner/twin/: Cargo.toml
components/color-combiner/twin/src/: lib.rs
components/memory/twin/: Cargo.toml
components/memory/twin/src/: lib.rs
components/pixel-write/twin/: Cargo.toml
components/pixel-write/twin/src/: lib.rs  uninit_flags.rs  zbuf_cache.rs
components/rasterizer/twin/: Cargo.toml
components/rasterizer/twin/src/: attr_accum.rs  deriv.rs  dsp_mul.rs  edge_walk.rs  lib.rs  rasterize.rs
components/rasterizer/twin/tests/: raster_viz.rs
components/spi/twin/: Cargo.toml
components/spi/twin/src/: reg.rs
components/texture/detail/bilinear-filter/twin/: Cargo.toml
components/texture/detail/bilinear-filter/twin/src/: lib.rs
components/texture/detail/block-decoder/twin/: Cargo.toml
components/texture/detail/block-decoder/twin/src/: lib.rs
components/texture/detail/l1-cache/twin/: Cargo.toml
components/texture/detail/l1-cache/twin/src/: lib.rs
components/texture/detail/uv-coord/twin/: Cargo.toml
components/texture/twin/: Cargo.toml
components/texture/twin/src/: lib.rs  tex_cache.rs  tex_compressed.rs  tex_decode.rs  tex_fetch.rs  tex_filter.rs  tex_sample.rs
constraints/: icepi_zero.lpf
crates/bits/: Cargo.toml
crates/ecp5-model/: Cargo.toml
crates/pico-gs-core/: Cargo.toml
crates/pico-gs-core/src/: lib.rs
crates/pico-gs-core/src/assets/: teapot.rs  textures.rs
crates/pico-gs-core/src/gpu/: driver.rs  mod.rs  registers.rs  vertex.rs
crates/pico-gs-core/src/render/: commands.rs  lighting.rs  mesh.rs  mod.rs  transform.rs
crates/pico-gs-core/src/scene/: demos.rs  mod.rs
crates/pico-gs-core/tests/: driver_tests.rs  packing_tests.rs  transform_tests.rs
crates/pico-gs-emulator/: Cargo.toml
crates/pico-gs-emulator/src/: clock.rs  lib.rs  modules.rs  state.rs  tick.rs
crates/pico-gs-emulator/src/modules/: display.rs  memory.rs  pixel_pipeline.rs  rasterizer.rs  spi.rs
crates/pico-gs-hal/: Cargo.toml
crates/pico-gs-pc/: Cargo.toml
crates/pico-gs-pc/src/: input.rs  main.rs  transport.rs
crates/pico-gs-rp2350/: Cargo.toml  build.rs
crates/qfixed/: Cargo.toml
crates/qfixed/src/: convert.rs  fmt.rs  lib.rs  ops.rs  q.rs  serde_impl.rs  uq.rs
crates/qfixed/tests/: basic.rs
crates/sdram-model/: Cargo.toml
doc/design/: README.md  concept_of_execution.md  design_decisions.md  unit_000_template.md  unit_001_spi_slave_controller.md  unit_002_command_fifo.md  unit_003_register_file.md  unit_004_triangle_setup.md  unit_005.01_edge_setup.md  unit_005.01_triangle_setup.md  (+40 more)
firmware/: Cargo.toml  memory.x
firmware/.cargo/: config.toml
firmware/src/assets/: teapot.rs  textures.rs
firmware/src/gpu/: vertex.rs
firmware/src/math/: fixed.rs
firmware/src/render/: commands.rs  lighting.rs  mesh.rs  transform.rs
firmware/src/scene/: demos.rs
firmware/tests/: lighting_tests.rs  packing_tests.rs  transform_tests.rs
host_app/: Cargo.toml  build.rs
integration/: Makefile  gpu_top.sv  tb_l1_cache_wrap_dt.fst
integration/gs-twin/: Cargo.toml
integration/gs-twin/src/: debug_pixel.rs  lib.rs  test_harness.rs
integration/gs-twin/tests/: integration.rs
pipeline/: gen_diagrams.py  pipeline.yaml  validate.py
registers/: Cargo.toml
rtl/: gpu_top.sv
shared/: fp_types_pkg.sv
shared/gs-twin-core/: Cargo.toml
shared/gs-twin-core/src/: alpha_test.rs  debug_types.rs  depth_range.rs  fragment.rs  hex_parser.rs  hiz.rs  lib.rs  math.rs  texel.rs  triangle.rs
spi_gpu/: .gitignore  Makefile  verilator.f  verilator_sim.f
spi_gpu/dt/gs-twin/: Cargo.toml
spi_gpu/dt/gs-twin-cli/: Cargo.toml
spi_gpu/dt/gs-twin-cli/src/: main.rs
spi_gpu/dt/gs-twin/src/: cmd.rs  hex_parser.rs  lib.rs  math.rs  mem.rs  pipeline.rs  reg.rs  reg_ext.rs  test_harness.rs
spi_gpu/dt/gs-twin/src/pipeline/: alpha_blend.rs  alpha_test.rs  clip.rs  color_combine.rs  command_proc.rs  debug_pixel.rs  depth_range.rs  display.rs  dither.rs  early_z.rs  fragment.rs  mod.rs  pixel_write.rs  rasterize.rs  recip.rs  stipple.rs  tex_cache.rs  tex_compressed.rs  tex_decode.rs  tex_fetch.rs  tex_filter.rs  tex_sample.rs  texel.rs  vertex.rs
spi_gpu/dt/gs-twin/tests/: integration.rs  raster_viz.rs
tools/asset-prep/: Cargo.toml
tools/asset-prep/src/: identifier.rs  lib.rs  main.rs  png_converter.rs
twin/components/display/: Cargo.toml
twin/components/display/src/: lib.rs
twin/components/dither/: Cargo.toml
twin/components/dither/src/: lib.rs
twin/components/texture/: Cargo.toml
twin/components/texture/detail/bilinear-filter/: Cargo.toml
twin/components/texture/detail/bilinear-filter/src/: lib.rs
twin/components/texture/detail/block-decoder/: Cargo.toml
twin/components/texture/detail/block-decoder/src/: tex_decode.rs  tex_fetch.rs
twin/components/texture/detail/l1-cache/: Cargo.toml
twin/components/texture/detail/l1-cache/src/: lib.rs
twin/components/texture/detail/l2-cache/src/: lib.rs
twin/components/texture/detail/palette-lut/: Cargo.toml
twin/components/texture/detail/palette-lut/src/: lib.rs
twin/components/texture/detail/uv-coord/src/: lib.rs
twin/components/texture/src/: lib.rs  tex_sample.rs
twin/components/zbuf/: Cargo.toml
twin/components/zbuf/src/: zbuf_cache.rs
(+719 files in other folders)
