[workspace]
members = [
    "crates/pico-gs-hal",
    "crates/pico-gs-core",
    "crates/pico-gs-rp2350",
    "crates/pico-gs-pc",
    "crates/asset-build-tool",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[profile.release]
debug = 2
lto = true
opt-level = "s"

[profile.dev]
debug = 2
opt-level = 1
