[workspace]
members = [
    "crates/qfixed",
    "components/registers/twin",
    "shared/gs-twin-core",
    "components/rasterizer/twin",
    "components/stipple/twin",
    "components/early-z/twin",
    "components/texture/twin",
    "components/texture/detail/l1-cache/twin",
    "components/texture/detail/l2-cache/twin",
    "components/texture/detail/block-decoder/twin",
    "components/texture/detail/uv-coord/twin",
    "components/texture/detail/bilinear-filter/twin",
    "components/color-combiner/twin",
    "components/alpha-blend/twin",
    "components/dither/twin",
    "components/pixel-write/twin",
    "components/zbuf/twin",
    "components/memory/twin",
    "components/display/twin",
    "components/spi/twin",
    "integration/gs-twin",
    "integration/gs-twin-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.93"
license = "MIT"

[workspace.dependencies]
gs-twin = { path = "integration/gs-twin" }
