[package]
name = "pico-gs-core"
version.workspace = true
edition.workspace = true
description = "Platform-agnostic GPU driver, rendering, and scene management for pico-gs"

[dependencies]
pico-gs-hal = { path = "../pico-gs-hal" }
glam = { version = "0.30", default-features = false, features = ["libm"] }
fixed = "1.30.0"
libm = "0.2"
heapless = "0.9.2"

[build-dependencies]
asset-prep = { path = "../asset-build-tool" }
