[package]
name = "pico-gs-emulator"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Cycle-accurate GPU emulator with double-buffered pure-function architecture"

[dependencies]
ecp5-model = { path = "../ecp5-model" }
sdram-model = { path = "../sdram-model" }
