[package]
name = "gs-twin"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Bit-accurate transaction-level digital twin of the pico-gs FPGA graphics synthesizer"

[dependencies]
# Foundation
gs-twin-core = { path = "../../shared/gs-twin-core" }
qfixed = { path = "../../crates/qfixed" }
gpu-registers.workspace = true

# Component crates
gs-rasterizer = { path = "../../twin/components/rasterizer" }
gs-stipple = { path = "../../twin/components/stipple" }
gs-early-z = { path = "../../twin/components/early-z" }
gs-texture = { path = "../../twin/components/texture" }
gs-color-combiner = { path = "../../twin/components/color-combiner" }
gs-dither = { path = "../../twin/components/dither" }
gs-pixel-write = { path = "../../twin/components/pixel-write" }
gs-zbuf = { path = "../../twin/components/zbuf" }
gs-memory = { path = "../../twin/components/memory" }
gs-display = { path = "../../twin/components/display" }
gs-spi = { path = "../../twin/components/spi" }

# Image output for golden reference PNGs
image = { version = "0.25", default-features = false, features = ["png"] }

# Debugger breakpoint (triggers only when debugger is attached)
dbg_breakpoint = { version = "0.1", default-features = false }
