[package]
name = "asset-prep"
version = "0.1.0"
edition = "2021"
authors = ["pico-gs team"]
description = "Asset preparation tool for RP2350 firmware - converts PNG/OBJ to GPU-compatible formats"

[[bin]]
name = "asset-prep"
path = "src/main.rs"

[dependencies]
image = "0.25"
tobj = "4.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
bytemuck = "1.14"

[dev-dependencies]
tempfile = "3.8"
