[package]
name = "gs-alpha-blend"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Alpha blend component of the pico-gs digital twin"

[dependencies]
gs-twin-core = { path = "../../../shared/gs-twin-core" }
gs-memory = { path = "../../memory/twin" }
gpu-registers.workspace = true
qfixed = { path = "../../../crates/qfixed" }
