[package]
name = "gs-memory"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Memory model component of the pico-gs digital twin"

[dependencies]
gs-twin-core = { path = "../../../shared/gs-twin-core" }
gpu-registers = { path = "../../registers/twin", default-features = false }
image = { version = "0.25", default-features = false, features = ["png"] }
