[package]
name = "gs-pixel-write"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Pixel write component of the pico-gs digital twin"

[dependencies]
gs-twin-core = { path = "../../../shared/gs-twin-core" }
gs-memory = { path = "../../memory/twin" }
gs-zbuf = { path = "../../zbuf/twin" }
gpu-registers.workspace = true
qfixed = { path = "../../../crates/qfixed" }
