[package]
name = "gs-rasterizer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Rasterizer component of the pico-gs digital twin"

[dependencies]
gs-twin-core = { path = "../../../shared/gs-twin-core" }
qfixed = { path = "../../../crates/qfixed" }
gpu-registers = { path = "../../registers/twin", default-features = false }

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
