[package]
name = "gs-rasterizer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Rasterizer component of the pico-gs digital twin"

[dependencies]
gs-twin-core = { path = "../../../shared/gs-twin-core" }
qfixed = { path = "../../../crates/qfixed" }
gpu-registers.workspace = true

[[bin]]
name = "gen_raster_test_vectors"
path = "src/bin/gen_raster_test_vectors.rs"

[[bin]]
name = "gen_hiz_meta_test_vectors"
path = "src/bin/gen_hiz_meta_test_vectors.rs"

[[bin]]
name = "gen_edge_walk_test_vectors"
path = "src/bin/gen_edge_walk_test_vectors.rs"

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
