[package]
name = "gs-texture"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Texture sampling component of the pico-gs digital twin"

[dependencies]
gs-twin-core = { path = "../../../shared/gs-twin-core" }
qfixed = { path = "../../../crates/qfixed" }
gpu-registers = { path = "../../registers/twin", default-features = false }
