[package]
name = "gs-twin-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI for running pico-gs digital twin renders and diffing against Verilator output"

[dependencies]
gs-twin.workspace = true
clap = { version = "4", default-features = false, features = ["derive", "std", "help", "usage", "error-context"] }
image = { version = "0.25", default-features = false, features = ["png"] }
anyhow = { version = "1", default-features = false, features = ["std"] }
