[package]
name = "gs-zbuf"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Z-buffer tile cache component of the pico-gs digital twin"

[dependencies]
gs-twin-core = { path = "../../../shared/gs-twin-core" }
gs-memory = { path = "../memory" }
