[package]
name = "gs-tex-block-decoder"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Texture block decompressor and fetcher for the pico-gs digital twin"

[dependencies]
gs-twin-core = { path = "../../../../../shared/gs-twin-core" }
gpu-registers = { path = "../../../../registers/twin", default-features = false }
qfixed = { path = "../../../../../crates/qfixed" }
gs-tex-l1-cache = { path = "../../l1-cache/twin" }
gs-tex-l2-cache = { path = "../../l2-cache/twin" }
