[package]
name = "gs-tex-bilinear-filter"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Texture bilinear/trilinear filter for the pico-gs digital twin"

[dependencies]
gs-twin-core = { path = "../../../../../shared/gs-twin-core" }
gpu-registers.workspace = true
qfixed = { path = "../../../../../crates/qfixed" }
gs-tex-block-decoder = { path = "../block-decoder" }
gs-tex-uv-coord = { path = "../uv-coord" }

[[bin]]
name = "gen_bilinear_test_vectors"
path = "src/bin/gen_bilinear_test_vectors.rs"
