[package]
name = "gs-tex-palette-lut"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared two-slot palette LUT (UNIT-011.06) for the pico-gs digital twin"

[dependencies]
gs-twin-core = { path = "../../../../../shared/gs-twin-core" }
qfixed = { path = "../../../../../crates/qfixed" }
gpu-registers.workspace = true
